<?xml version="1.0" encoding="utf-8"?>
<!-- Screen where New Users create their Email and password for their App account. -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_black"
    android:paddingStart="20dp"
    android:paddingTop="12dp"
    android:paddingEnd="20dp"
    android:paddingBottom="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_txt_in_layout_sign_up_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:theme="@style/text_input_layout_style"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/text_input_layout_error">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_txt_in_edit_txt_sign_up_screen"
                style="@style/edit_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/string_email"
                android:inputType="textEmailAddress"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                app:backgroundTint="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_txt_in_layout_sign_up_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:padding="4dp"
            android:theme="@style/text_input_layout_style"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/text_input_layout_error"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_txt_in_edit_txt_sign_up_screen"
                style="@style/edit_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/string_password"
                android:inputType="textPassword"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                app:backgroundTint="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/length_req_txt_view_sign_up_screen"
            style="@style/white_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:text="@string/string_length_req"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/uppercase_req_txt_view_sign_up_screen"
            style="@style/white_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:text="@string/string_uppercase_req"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/lowercase_req_txt_view_sign_up_screen"
            style="@style/white_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:text="@string/string_lowercase_req"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/number_req_txt_view_sign_up_screen"
            style="@style/white_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:text="@string/string_number_req"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/special_req_txt_view_sign_up_screen"
            style="@style/white_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:text="@string/string_special_req"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/re_pass_txt_in_layout_sign_up_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="4dp"
            android:theme="@style/text_input_layout_style"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/text_input_layout_error"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/re_pass_txt_in_edit_txt_sign_up_screen"
                style="@style/edit_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/string_re_enter_password"
                android:inputType="textPassword"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                app:backgroundTint="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/create_account_button_sign_up_screen"
            style="@style/button_states_text_style"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:layout_marginTop="120dp"
            android:background="@drawable/button_state_backgrounds"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/string_continue" />

    </LinearLayout>

</ScrollView>